--- a/nft-launch/package.json
+++ b/nft-launch/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-icons": "^4.3.1",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
